--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Browny</title>
+        <title>Purab</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
@@ -70,7 +70,7 @@
 			                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 			                    <i class="fa fa-bars"></i>
 			                </button>
-			                <a class="navbar-brand" href="index.html">browny</a>
+			                <a class="navbar-brand" href="index.html">Purab</a>
 			            </div><!--/.navbar-header-->
 			            <!-- End Header Navigation -->
 
@@ -103,9 +103,9 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> browny <br> star <span>.</span>   </h2>
-							<p>ui/ux designer and web developer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<h2>hi <span>,</span> i am <br> Purab <br> Balani <span>.</span>   </h2>
+							<p>Electrical and Computer Engineer</p>
+							<a href="assets/download/assets/download/resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -125,28 +125,25 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a Professional UI/UX Designer and Web developer. Consectetur an adipisi elita, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud.
+									I am an Electrical and Computer Engineering student and innovator in robotics and autonomous systems. Passionate about solving real-world problems, I specialize in creating cutting-edge solutions using advanced technologies like computer vision, machine learning, and embedded systems. My journey is driven by a dedication to blending engineering principles with creativity, contributing to a more connected and automated future.
 								</h3>
-								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
-								</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>phone</h3>
-											<p>987-123-6547</p>
+											<p>(949)-627-6457</p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>email</h3>
-											<p>browny@info.com</p>
+											<p>balanipb@gmail.com</p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
-											<p>www.brownsine.com</p>
+											<p>PurabB.github.io</p>
 										</div>
 									</div>
 								</div>
@@ -209,8 +206,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2008 - 2010</h2>
-									<h3>master <span>of </span> computer science</h3>
+									<h2>2016 - 2022</h2>
+									<h3> <span> </span> High School</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -219,11 +216,11 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
+											Aliso Niguel High School
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>California, USA</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											I was actively involved in sports and academics throughout high school, excelling as a member of the varsity track, cross country, and tennis teams. Beyond athletics, I contributed to the success of Robotics FRC Team 5199, showcasing my technical and collaborative skills. With a GPA of 4.3, I graduated as the Valedictorian, demonstrating a strong commitment to both academic excellence and extracurricular achievements. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -232,8 +229,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> computer science</h3>
+									<h2>2022 - 2024</h2>
+									<h3>bachelor <span>of </span> Electrical Engineering</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -242,11 +239,11 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
+											university of California,  Riverside
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>California, USA</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											At UC Riverside, I co-founded the Combat Robotics Club, leading a team to design competitive robots while mentoring members in Arduino programming, PCB design, and SolidWorks modeling. I also contributed to cutting-edge research in the Collaborative Intelligence Systems Lab (CISL) and Robotics and Medical Systems Lab (RaMS), focusing on autonomous vehicle systems and robotic medical devices. These experiences strengthened my passion for engineering innovation and prepared me for my transition to UC San Diego, where I am now pursuing a B.S. in Electrical and Computer Engineering, furthering my academic and professional goals. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -255,8 +252,8 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> creative design</h3>
+									<h2>2024 - current</h2>
+									<h3>bachelor <span>of </span> (ECE) Computer Engineering</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -266,12 +263,11 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of bolton
+											university of california, san diego
 										</h4>
-										<h5>bolton, united kingdome</h5>
+										<h5>california, usa</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-										</p>
+											At UC San Diego, I have been deeply involved in research and hands-on projects, furthering my expertise in robotics and autonomous systems. As part of the Collaborative Intelligence Systems Lab (CISL), I’ve contributed to developing a fully autonomous vehicle, integrating LiDAR, camera sensing, and machine learning to improve real-time decision-making. I’ve also played a key role in designing and building an autonomous Go-Kart, reducing costs and increasing battery efficiency while integrating computer vision for depth perception. In addition to my technical work, I have maintained a strong academic record, currently holding a GPA of 3.73, and I am actively working on further projects that push the boundaries of robotics and AI.										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
@@ -294,7 +290,7 @@
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">adobe photoshop</span>
+										<span class="progressText">Python</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -305,7 +301,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">adobe illustrator</span>
+										<span class="progressText">C++/C</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -316,7 +312,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">adobe after effects</span>
+										<span class="progressText">Arduino</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -327,7 +323,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">sketch</span>
+										<span class="progressText">circuit design</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -342,7 +338,7 @@
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">html 5</span>
+										<span class="progressText">computer vision</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -353,7 +349,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">css 3 animation</span>
+										<span class="progressText">ros/ros2</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -364,7 +360,7 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">communication</span>
+										<span class="progressText">AI/ML Algorithms</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -375,14 +371,14 @@
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText"> creativity</span>
+										<span class="progressText"> docker</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
-											   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
+											   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="10" aria-valuemax="100" style="">
 												    
 											   </div>
 											</div>
-											<h3>90%</h3>	
+											<h3>80%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
 								</div>
@@ -408,8 +404,8 @@
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2018 - Present</h2>
-													<h3>creative director</h3>
+													<h2>2024 - Present</h2>
+													<h3>Undergrad Researcher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -417,11 +413,11 @@
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															hoplony tech limited
+															Collaborative Intelligence Systems Lab (CISL)
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>California, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															The Collaborative Intelligence Systems Lab (CISL) focuses on developing advanced autonomous systems that integrate machine learning, computer vision, and sensor technologies to solve complex real-world problems. The lab’s research spans areas like autonomous driving, robotics, and intelligent decision-making, aiming to enhance the performance and adaptability of autonomous vehicles and systems in dynamic environments. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -437,21 +433,20 @@
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2016 - 2018
+														2023 - present
 													</h2>
-													<h3>associate design director</h3>
+													<h3>Autonomous GoKart Project Lead</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
 												<div class="timeline">
 													<div class="timeline-content text-right">
 														<h4 class="title">
-															hoplony tech limited
+															Personal Project
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>California, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-														</p>
+															The Autonomous Go-Kart project involves designing and building a cost-effective, high-performance autonomous vehicle. By integrating LiDAR, cameras, and machine learning algorithms, the project aims to enhance the Go-Kart’s perception and navigation capabilities. Key accomplishments include reducing costs by 30%, improving battery efficiency by 50%, and developing an optimized power distribution system using LTSpice and Altium for PCB design. This project demonstrates the application of cutting-edge robotics and autonomous driving technologies in a practical, hands-on environment														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
@@ -459,9 +454,9 @@
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2016 - 2018
+														2023 - present
 													</h2>
-													<h3>associate design director</h3>
+													<h3>Autonomous GoKart Project Lead</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -873,21 +868,21 @@
 							<div class="single-contact-box">
 								<div class="contact-adress">
 									<div class="contact-add-head">
-										<h3>browny star</h3>
-										<p>uI/uX designer</p>
+										<h3>Purab Balani</h3>
+										<p>Electrical and Computer Engineer</p>
 									</div>
 									<div class="contact-add-info">
 										<div class="single-contact-add-info">
 											<h3>phone</h3>
-											<p>987-123-6547</p>
+											<p>(949)-627-6457</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>email</h3>
-											<p>browny@info.com</p>
+											<p>balanipb@gmail.com</p>
 										</div>
 										<div class="single-contact-add-info">
 											<h3>website</h3>
-											<p>www.brownsine.com</p>
+											<p>PurabB.github.io</p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
@@ -910,14 +905,7 @@
 		<!--contact end -->
 
 		<!--footer-copyright start-->
-		<footer id="footer-copyright" class="footer-copyright">
-			<div class="container">
-				<div class="hm-footer-copyright text-center">
-					<p>
-						&copy; copyright yourname. design and developed by <a href="https://www.themesine.com/">themesine</a>
-					</p><!--/p-->
-				</div><!--/.text-center-->
-			</div><!--/.container-->
+
 
 			<div id="scroll-Top">
 				<div class="return-to-top">
