--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> Purab <br> Balani <span>.</span>   </h2>
 							<p>Electrical and Computer Engineer</p>
-							<a href="assets/download/assets/download/resume.pdf" download>download resume</a>
+							<a href="assets/download/resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
