--- a/index.html
+++ b/index.html
@@ -497,29 +497,18 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p1.jpg" alt="portfolio image" style="width: 250px; height: 150px;"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
+											<a href="https://github.com/UCSD-ECEMAE-148/fall-2024-final-project-team-3">
+												Autonomous Tank
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p2.png" alt="portfolio image" style="width: 250px; height: 150px;"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												ui/ux design
-											</a>
-										</div><!-- /.isotope-overlay -->
-									</div><!-- /.item -->
-								</div><!-- /.col -->
-
-								<div class="col-sm-4">
-									<div class="item">
-										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
-										<div class="isotope-overlay">
-											<a href="#">
-												web design
+											<a href="https://sites.google.com/ucsd.edu/lending-a-hand/home?authuser=1">
+												Robotic Arm
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -527,18 +516,29 @@
 
 								<div class="col-sm-4">
 									<div class="item">
-										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p5.JPEG" alt="portfolio image" style="width: 250px; height: 330px;"/>
 										<div class="isotope-overlay">
 											<a href="#">
-												web development
+												autonomous gokart
+											</a>
+										</div><!-- /.isotope-overlay -->
+									</div><!-- /.item -->
+								</div><!-- /.col -->
+
+								<div class="col-sm-4">
+									<div class="item">
+										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image" style="width: 250px; height: 150px;"/>
+										<div class="isotope-overlay">
+											<a href="https://github.com/PurabB/bearhack2024">
+												Web development
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
 									<div class="item">
-										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
+										<img src="assets/images/portfolio/p4.png" alt="portfolio image" style="width: 250px; height: 150px;"/>
 										<div class="isotope-overlay">
-											<a href="#">
-												web development
+											<a href="https://github.com/cs100/final-project-jthac007-mkael001-pbala011-ksing080-jbalt026">
+												software development
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
@@ -625,11 +625,9 @@
 								</div><!--/.contact-adress-->
 								<div class="hm-foot-icon">
 									<ul>
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
+										<li><a href="https://github.com/PurabB"><i class="fa fa-github"></i></a></li><!--/li-->
+										<li><a href="https://www.linkedin.com/in/purab-balani/"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+										<li><a href="https://www.instagram.com/purab_balani/"><i class="fa fa-instagram"></i></a></li><!--/li-->
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
 							</div><!--/.single-contact-box-->
